# haulbrokr-app

./: .env.example  .gitignore  .rc2-certify-summary.json  .replit  ADMIN_DASHBOARD_AUDIT.md  ADMIN_ONBOARDING_CENTER.md  AGENTS.md  APP_STORE_REVIEW_GUIDE.md  APP_STORE_REVIEW_NOTES.md  AUTH_AUDIT.md  AUTH_FIX_REPORT.md  BETA_TEST_REPORT.md  CLOSED_BETA_SIGNOFF.md  DEPLOYMENT_CHECKLIST.md  DESIGN_IMPLEMENTATION_GUIDE.md  DEVELOPER_HANDOFF.md  DOCUMENT_UPLOAD_TRACE.md  Dockerfile  ENGINEERING_STATUS.md  ENVIRONMENT_INVENTORY.md  FINAL_CLOSED_BETA_SIGNOFF.md  FINAL_IMPLEMENTATION_REPORT.md  FIXES_APPLIED.md  GOOGLE_MAPS_PRODUCTION_CERTIFICATION.md  GO_LIVE_CERTIFICATION.md  GO_LIVE_CHECKLIST.md  GO_LIVE_STATUS.md  HAULBROKR_LAUNCH_REPORT.md  INCIDENT_RESPONSE.md  KNOWN_ISSUES.md  LIVE_CARRIER_ONBOARDING_REPORT.md  LIVE_NO_DEMO_AUDIT.md  MIGRATION_TO_CURSOR.md  MONITORING_CHECKLIST.md  ONBOARDING_AUDIT.md  OPERATOR_RUNBOOK.md  PLATFORM_SEPARATION_PHASE_2_REPORT.md  POST_LAUNCH_CHECKLIST.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_ONBOARDING_CERTIFICATION.md  (+32 more)
attached_assets/: Pasted-2026-06-18T04-00-44-865Z-healthcheck-failed-error-healt_1781930510805.txt  Pasted-For-HaulBrokr-think-of-it-as-Uber-Freight-Broker-Market_1781577573295.txt  ios_distribution_1779942753290.cer  (+2 more)
docs/: DEPLOY.md  (+12 more)
dump-site/: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
dump-site-collector/: .gitignore  README.md  config.yaml  pyproject.toml  run.py
dump-site-collector/src/haulbrokr_collector/: __init__.py  cli.py  config.py  models.py  pipeline.py
dump-site-collector/src/haulbrokr_collector/exporters/: __init__.py
dump-site-collector/src/haulbrokr_collector/importers/: aggregate_yards.py  asphalt_recycling.py  cd_facilities.py  concrete_recycling.py  epa_landfill.py  rock_quarries.py  state_agency.py  transfer_stations.py
dump-site-collector/src/haulbrokr_collector/utils/: __init__.py  normalize.py  progress.py  retry.py
dump-site-collector/tests/: test_dedupe.py  test_exporters.py  test_importers.py  test_pipeline.py  test_state.py
dump-site/src/haulbrokr_collector/: config.py  dedupe.py  logging_setup.py  state.py
dump-site/src/haulbrokr_collector/exporters/: __init__.py
dump-site/src/haulbrokr_collector/importers/: __init__.py  base.py  common.py  dirt_disposal.py  epa_landfill.py  gravel_pits.py  seed_data.py  state_agency.py
dump-site/src/haulbrokr_collector/utils/: __init__.py  crawler.py
dump-site/tests/: test_cli_flags.py  test_config.py  test_crawler.py  test_exporters.py  test_models.py  test_normalize.py  test_remote_importers.py
(+997 files in other folders)
