[project]
name = "haulbrokr-dump-site-collector"
version = "1.0.0"
description = "HaulBrokr Dump Site Collector — production-grade facility data importer, deduplicator, and exporter"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.4.2",
    "httpx>=0.28.1",
    "openpyxl>=3.1.5",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "pyyaml>=6.0.3",
    "rapidfuzz>=3.14.5",
    "rich>=15.0.0",
    "tenacity>=9.1.4",
    "tqdm>=4.68.4",
]

[project.scripts]
haulbrokr-collector = "haulbrokr_collector.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/haulbrokr_collector"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "mypy>=2.2.0",
    "ruff>=0.15.20",
    "types-pyyaml>=6.0.12.20260518",
    "types-tqdm>=4.68.0.20260608",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --tb=short"

[tool.mypy]
python_version = "3.14"
strict = true
packages = ["haulbrokr_collector"]
mypy_path = "src"

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
